--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,18 +4,18 @@ project(ConcreteScript VERSION 0.0.1)
 set(CMAKE_C_STANDARD 23)
 
 set(CSI_PUBLIC_HEADERS
-        Interpreter/include/lexer.h
-        Interpreter/include/config.h
+        interpreter/include/lexer.h
+        interpreter/include/config.h
 )
 set(CSI_SOURCES
-        Interpreter/src/lexer.c
+        interpreter/src/lexer.c
 )
 
 set(CSVS_SOURCES
-        VisualScripting/src/main.c
+        visual_scripting/src/main.c
 )
 
-add_executable(ConcreteScriptInterpreter ${CSI_PUBLIC_HEADERS} ${CSI_SOURCES} Interpreter/src/main.c)
+add_executable(ConcreteScriptInterpreter ${CSI_PUBLIC_HEADERS} ${CSI_SOURCES} interpreter/src/main.c)
 if (BUILD_SHARED_LIBS)
     add_library(ConcreteScriptInterpreterLib SHARED ${CSI_PUBLIC_HEADERS} ${CSI_SOURCES})
 else()
@@ -23,7 +23,7 @@ else()
 endif()
 add_executable(ConcreteScriptVisualScripting ${CSI_PUBLIC_HEADERS} ${CSI_SOURCES} ${CSVS_SOURCES})
 
-target_include_directories(ConcreteScriptInterpreter PRIVATE Interpreter/src Interpreter/include)
-target_include_directories(ConcreteScriptInterpreterLib PRIVATE Interpreter/src)
-target_include_directories(ConcreteScriptInterpreterLib PUBLIC Interpreter/include)
-target_include_directories(ConcreteScriptVisualScripting PRIVATE Interpreter/src Interpreter/include VisualScripting/src)
+target_include_directories(ConcreteScriptInterpreter PRIVATE interpreter/src interpreter/include)
+target_include_directories(ConcreteScriptInterpreterLib PRIVATE interpreter/src)
+target_include_directories(ConcreteScriptInterpreterLib PUBLIC interpreter/include)
+target_include_directories(ConcreteScriptVisualScripting PRIVATE interpreter/src interpreter/include visual_scripting/src)
